--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,14 @@ li::before {
   flex: 50%;
   padding: 5px;
 }
+
+#coming-soon {
+  cursor: default;
+  /* color: grey; */
+  text-decoration: none;
+}
+
+a#coming-soon:hover {
+  text-decoration: none;
+    color: grey;
+}
